# upe-aci

./: .gitignore  ARCHITECTURE.md  DEPLOY_GUIDE.md  README.md  env.example  level_1_agent.py  nginx.conf  production_config.py  pyproject.toml
agent/: Dockerfile  agent.py  deploy.sh  docker-compose.prod.yml  docker-compose.yml  env.example  production.env  pyproject.toml  safebot.py
agent/core/: agent.py  teams.py
agent/telegram_bot/: __init__.py  bot.py  teams_bot.py
agent/web/: __init__.py  app.py  teams_app.py
ui/: package-lock.json
ui/src/app/: layout.tsx
ui/src/components/playground/ChatArea/ChatInput/: ChatInput.tsx
ui/src/components/playground/ChatArea/Messages/: ChatBlankState.tsx
ui/src/components/playground/Sidebar/: EntitySelector.tsx  ModeSelector.tsx  Sidebar.tsx
ui/src/components/playground/Sidebar/Sessions/: DeleteSessionModal.tsx  SessionBlankState.tsx  SessionItem.tsx  Sessions.tsx
ui/src/components/ui/icon/: constants.tsx  custom-icons.tsx
